src-ken&y/objects/User_Preference__c.object
<CustomObject>
    <customHelpPage>HelpUserPreference</customHelpPage>
    <description>Track individual user preferences or configurations</description>
    <fields>
        <fullName>Accounting_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default segment values for chart of accounts values.</description>
        <inlineHelpText>Default segment values for chart of accounts values.</inlineHelpText>
        <label>Accounting Default</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_access_to_all_facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow access to all facilities</description>
        <label>Allow access to all facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company that is used to default on new orders</description>
        <label>Default Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>The default company facility to which a user belongs. This controls access to inventory transfer and inventory change records.</inlineHelpText>
        <label>Default Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Default Facility does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Default_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegated_Purchaser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that is able to purchase on my behalf</description>
        <inlineHelpText>Enter the name of the Kenandy eProcurement user that you want to allow to purchase goods/services on your behalf.</inlineHelpText>
        <label>Delegated Purchaser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchasing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchasing group the user belongs to.</description>
        <inlineHelpText>The purchasing group to which the user belongs. Carts submitted by this user are routed to this purchasing group for processing an approval.</inlineHelpText>
        <label>Purchasing Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matching purchasing groups exists for this company.</errorMessage>
            <filterItems>
                <field>Company_Group__c.Type__c</field>
                <operation>equals</operation>
                <value>Purchasing</value>
            </filterItems>
            <filterItems>
                <field>$Source.Default_Company__c</field>
                <operation>equals</operation>
                <valueField>Company_Group__c.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Company_Group__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Order_Deliver_to_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Order Deliver-to Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Transfer Order Deliver-to Facility does not belong to the Default Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Default_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>User Preferences (Transfer Order Deliver-to Facility)</relationshipLabel>
        <relationshipName>User_Preferences2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Order_Deliver_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Order Deliver-to Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Transfer_Order_Deliver_to_Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>User Preferences (Transfer Order Deliver-to Location)</relationshipLabel>
        <relationshipName>User_Preferences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Order_Ship_from_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Order Ship-from Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Transfer Order Ship-from Facility does not belong to the Default Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Default_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>User Preferences (Default Transfer Order Ship-from Facilit)</relationshipLabel>
        <relationshipName>User_Preferences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Order_Ship_from_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Order Ship-from Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Transfer Order Ship-from Location does not belong to the Transfer Order Ship-from Facility</errorMessage>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Transfer_Order_Ship_from_Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user to whom this user preference applies.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Preferences2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Preference</label>
    <listViews>
        <fullName>All_User_Preferences</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Default__c</columns>
        <columns>Default_Company__c</columns>
        <columns>Default_Facility__c</columns>
        <columns>Delegated_Purchaser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Preferences</label>
    </listViews>
    <nameField>
        <label>User Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Transfer_Order_Facilities</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(AND(NOT(ISBLANK(Transfer_Order_Ship_from_Facility__c)),NOT( ISBLANK(Transfer_Order_Deliver_to_Facility__c))), Transfer_Order_Deliver_to_Facility__c =  Transfer_Order_Ship_from_Facility__c), True, False)</errorConditionFormula>
        <errorMessage>Transfer Order Ship-From Facility cannot be the same as the Transfer Order Deliver-To Facility</errorMessage>
    </validationRules>
</CustomObject>